# goup.vc

./: .gitignore  Cargo.toml  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
charts/goup/: Chart.yaml  values.yaml
charts/goup/templates/: _helpers.tpl  db_migrator_job.yaml  db_migrator_secret.yaml  mcp_deployment.yaml  mcp_ingress.yaml  mcp_secret.yaml  mcp_service.yaml  redirector_deployment.yaml  redirector_ingress.yaml  redirector_secret.yaml  redirector_service.yaml  redirector_serviceaccount.yaml  server_deployment.yaml  server_secret.yaml
database/: dev-seed.sql
database/migrations/functions/: 001_load_functions.sql
database/migrations/schema/: 0001_initial.sql  0003_jobs.sql  0005_landscape.sql  0015_site_onboarding_notification.sql  0017_jobs_visibility.sql  0018_user_mentorship.sql  0020_landscape_entry_kinds.sql  0023_baseline_compatibility.sql  0024_landscape_investors.sql  0026_group_join_approval.sql  0027_user_substack_youtube_urls.sql  0029_coffee_meet.sql  0031_coffee_meet_requests.sql  0034_alliance_coffee_meet_enabled.sql  0037_public_reports.sql  0038_mock_interviews.sql  0039_group_accelerators.sql  0040_mock_interviews.sql  0043_intentional_dating.sql  0045_book_exchange.sql  0046_event_integrations.sql  0049_add_open_graph_preview_images.sql  0050_add_event_registration_questions.sql  0051_add_notification_delivery_claimed_at_index.sql  0052_add_event_organizers.sql  0053_enforce_case_insensitive_user_identifiers.sql  0054_require_meeting_auto_end_claim_token.sql  0057_jobs.sql  (+36 more)
database/tests/: schema_migration_compatibility.sh
design/: goup.pen
docs/: .wiki-meta.json  _sidebar.md  by-the-numbers.md  cleanup-opportunities.md  development.md  index.md
docs/background/: design-decisions.md
docs/features/: accelerator.md  auth.md  dashboard.md  events.md  images.md  index.md  jobs.md  landscape.md  meetings.md  mock-interviews.md  payments.md
docs/guides/: alliance-dashboard.md  event-operations.md  group-dashboard.md  group-leads-runbook.md  group-members-runbook.md  jobs.md  project-contributors-runbook.md  public-site.md
docs/how-to-contribute/: debugging.md  development-workflow.md  index.md  patterns-and-conventions.md  tooling.md
docs/overview/: architecture.md
docs/reference/: configuration.md  data-models.md  dependencies.md  index.md
docs/services/: index.md  ocg-server.md
droid-wiki/: deployment.md  security.md
droid-wiki/api/: index.md
droid-wiki/background/: index.md
droid-wiki/features/: groups-and-alliances.md  jobs.md
droid-wiki/overview/: glossary.md
droid-wiki/services/: mcp-server.md
mcp/: README.md  package.json  server.mjs  tools.json
mcp-server/: README.md  tools.json
ocg-server/: Dockerfile  Dockerfile.dev
ocg-server/src/: auth.rs  config.rs  db.rs  integrations.rs  main.rs  router.rs  services.rs  templates.rs  types.rs  validation.rs
scripts/: bootstrap-ec2.sh  nginx-goup.conf
tests/e2e/: utils.js
wiki/: fun-facts.md  lore.md  maintainers.md
wiki/features/: notifications.md
wiki/how-to-contribute/: testing.md
wiki/overview/: getting-started.md  index.md
wiki/services/: ocg-redirector.md
(+486 files in other folders)
