[workspace]
resolver = "2"
members = [
    "ocg-redirector",
    "ocg-server"
]

[workspace.package]
version = "0.7.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.96.0"

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22"
askama = { version = "0.16.0", features = ["serde_json"] }
async-trait = "0.1.89"
aws-credential-types = "1.2.14"
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = [
    "default-https-client",
    "http-1x",
    "rt-tokio",
    "sigv4a",
] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum-login = "0.18.0"
axum-messages = "0.8.0"
bytes = "1.12.0"
cached = { version = "2.0.2", features = ["async"] }
clap = { version = "4.6.1", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
csv = "1.4.0"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
emojis = "0.9.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
garde = { version = "0.23.0", features = ["derive", "url", "email"] }
hex = "0.4"
hmac = "0.13.0"
icalendar = "0.17.11"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "tiff", "webp"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
markdown = "1.0.0"
mime_guess = "2.0.5"
minify-html = "0.18.1"
mockall = "0.14.0"
num-format = "0.4.4"
oauth2 = "5.0.0"
openidconnect = { version = "4.0.1", features = ["accept-rfc3339-timestamps"] }
openssl = { version = "0.10.81", features = ["vendored"] }
password-auth = "1.0.0"
percent-encoding = "2.3.2"
postgres-openssl = "0.5.3"
quick-xml = "0.41.0"
qrcode = { version = "0.14.1", features = ["svg"] }
reqwest = { version = "0.13.4", features = ["json"] }
# Keep this exact pin so the workspace resolves to patched rkyv 0.7.46.
# parcel_sourcemap otherwise pulls vulnerable rkyv 0.7.45 (RUSTSEC-2026-0001).
rkyv = "=0.7.46"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_qs = { version = "1.1.2", features = ["axum"] }
serde_urlencoded = "0.7.1"
serde_with = "3.21.0"
sha2 = "0.11.0"
strum = { version = "0.28.0", features = ["derive"] }
subtle = "2.6"
thiserror = "2.0.18"
time = "0.3.51"
tokio = { version = "1.52.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
    "time",
] }
tokio-postgres = { version = "0.7.18", features = [
    "with-chrono-0_4",
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
] }
tokio-util = { version = "0.7.18", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["auth", "fs", "set-header", "trace"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
unicode-segmentation = "1.13.3"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
which = "8.0.4"
